aks-manual-deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-a
            port:
              number: 5000
      - path: /service-a
        pathType: Prefix
        backend:
          service:
            name: service-a
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-b
            port:
              number: 5000
      - path: /service-b
        pathType: Prefix
        backend:
          service:
            name: service-b
            port:
              number: 5000
